--- a/index.html
+++ b/index.html
@@ -16,13 +16,26 @@
                 <a href="" id="logo">
                     <div class="logo"> </div>
                 </a>
-                <a href="" id="toogle">
-                    <div class="menu"> </div>
+                <a href="" id="toggle">
+                    <div class="menu">
+                    </div>
+
                 </a>
+            </div>
+            <div class="nav-background">
+                <ul>
+                    <li><a href="#">Work</a></li>
+                    <li><a href="#">About</a></li>
+                    <li><a href="#">Carrers</a></li>
+                    <li><a href="#">Ideas</a></li>
+                    <li><a href="#">Event</a></li>
+                    <li><a href="#">Work</a></li>
+                </ul>
             </div>
         </nav>
     </header>
-    <img src="assets/img/laboratoria.svg" alt="laboratoria">
+    <script type="text/javascript" src="assets/js/app.js">
+    </script>
 </body>
 
 </html>
