--- a/index.html
+++ b/index.html
@@ -29,12 +29,16 @@
             </div>
         </nav>
     </header>
+    <section>
+        <div class="intro">
+            <div class="escribe">
+                <h1><span style="color:purple">var </span><span style="color:white">strongWomen </span> <span style="color:#063a71 ">=</span><span style="color:green"> "We want to change the world";<span></h1>
+            </div>
+        </div>
+    </section>
     <ul id="contenedor">
     </ul>
-
     <script type="text/javascript" src="assets/js/app.js">
     </script>
-
 </body>
-
 </html>
